src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__track_details_ui__track_details_ui_tests__tests__snapshot_tests__track_details_TrackHistorySortPrompt_1.snap
---
source: src/ui/lidarr_ui/library/track_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Track Details  ─────────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │ Track Details │ History                                                                                                  │                     
                    │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                     
                    │   Source Title                                  Event Type              Quality            Date                          │                     
                    │=> Test source title                             grabbed                 Lossless           2023-01-01 00:00:00 UTC       │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                 ╭──────────────────────╮                                                 │                     
                    │                                                 │Something             │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 ╰──────────────────────╯                                                 │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
